k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders-api
  namespace: wrak
spec:
  selector:
    app: orders
  ports:
    - port: 80
      targetPort: 8080
